--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>${clojure.groupId}</groupId>
+      <groupId>org.clojure</groupId>
       <artifactId>clojure</artifactId>
     </dependency>
     <dependency>
